@@ -832,3 +832,6 @@
   causing close_connection to read from it (when deciding on doing a quick reconnect).
   Could have caused a crash, although nobody ever reported one...
 - Removed useless strncpyzt with dest==src.
+- Temporary workaround for spamfilter bug: action 'viruschan' in combination with the
+  'u' (user) target can cause severe problems (crashes, etc). For now, we have disabled
+  'viruschan' in combination with 'u'. A real fix will require quite some work, sorry.
